- 
    Bug 
- 
    Resolution: Done
- 
    P3: Somewhat important 
- 
    6.3.0 Alpha
- 
    None
- 
        
- 
        897845ca7f (qt/qtbase/dev) 897845ca7f (qt/tqtc-qtbase/dev)
On Wayland, you can't read screen content, so the "pick color" feature does not do anything. In cases such as these, we should detect that the platform does not support the feature and hide or disable the button.
- relates to
- 
                    QTBUG-120957 "Pick Screen Color" button in QColorDialog unavailable on Wayland -         
- Closed
 
-         
- resulted from
- 
                    QTBUG-81538 Impossible to pick a color on the Screen under Wayland -         
- Closed
 
-